force-app/main/default/objects/AgentSession__c/AgentSession__c.object-meta.xml
<CustomObject>
    <description>Session-level aggregation for AES scoring and monitoring in the Self-Improving Agent Framework.</description>
    <label>Agent Session</label>
    <nameField>
        <label>Session ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>