force-app/main/default/objects/AgentSession__c/fields/actions_taken__c.field-meta.xml
<CustomField>
    <fullName>actions_taken__c</fullName>
    <description>Total actions</description>
    <label>Actions Taken</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>