force-app/main/default/objects/AgentSession__c/fields/aes_efficiency__c.field-meta.xml
<CustomField>
    <fullName>aes_efficiency__c</fullName>
    <description>Efficiency component (0-30)</description>
    <label>AES Efficiency</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>