force-app/main/default/objects/AgentSession__c/fields/aes_goal__c.field-meta.xml
<CustomField>
    <fullName>aes_goal__c</fullName>
    <description>Goal component (0-40)</description>
    <label>AES Goal</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>