force-app/main/default/objects/AgentSession__c/fields/aes_learning__c.field-meta.xml
<CustomField>
    <fullName>aes_learning__c</fullName>
    <description>Learning component (0-30)</description>
    <label>AES Learning</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>