force-app/main/default/objects/AgentSession__c/fields/aes_score__c.field-meta.xml
<CustomField>
    <fullName>aes_score__c</fullName>
    <description>Computed AES (0-100)</description>
    <label>AES Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>