force-app/main/default/objects/AgentSession__c/fields/agent_api_name__c.field-meta.xml
<CustomField>
    <fullName>agent_api_name__c</fullName>
    <description>Which agent</description>
    <label>Agent API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>