force-app/main/default/objects/AgentSession__c/fields/end_time__c.field-meta.xml
<CustomField>
    <fullName>end_time__c</fullName>
    <description>Session end</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>