force-app/main/default/objects/AgentSession__c/fields/final_outcome__c.field-meta.xml
<CustomField>
    <fullName>final_outcome__c</fullName>
    <description>Session outcome</description>
    <label>Final Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>partial</fullName>
            </value>
            <value>
                <fullName>failure</fullName>
            </value>
            <value>
                <fullName>loop_detected</fullName>
            </value>
            <value>
                <fullName>fallback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>