force-app/main/default/objects/AgentSession__c/fields/final_points__c.field-meta.xml
<CustomField>
    <fullName>final_points__c</fullName>
    <description>Cumulative score</description>
    <label>Final Points</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>