force-app/main/default/objects/AgentSession__c/fields/improvement_group__c.field-meta.xml
<CustomField>
    <fullName>improvement_group__c</fullName>
    <description>&quot;treatment&quot; or &quot;control&quot;</description>
    <label>Improvement Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>