force-app/main/default/objects/AgentSession__c/fields/lessons_applied__c.field-meta.xml
<CustomField>
    <fullName>lessons_applied__c</fullName>
    <description>Lessons referenced</description>
    <label>Lessons Applied</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>