force-app/main/default/objects/AgentSession__c/fields/lessons_created__c.field-meta.xml
<CustomField>
    <fullName>lessons_created__c</fullName>
    <description>Lessons documented</description>
    <label>Lessons Created</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>