force-app/main/default/objects/AgentSession__c/fields/primary_topic__c.field-meta.xml
<CustomField>
    <fullName>primary_topic__c</fullName>
    <description>Most-active subagent</description>
    <label>Primary Topic</label>
    <length>80</length>
    <type>Text</type>
</CustomField>