force-app/main/default/objects/AgentSession__c/fields/session_id__c.field-meta.xml
<CustomField>
    <fullName>session_id__c</fullName>
    <description>Links to AgentActionOutcome__c</description>
    <externalId>true</externalId>
    <label>Session ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>