force-app/main/default/objects/AgentSession__c/fields/start_time__c.field-meta.xml
<CustomField>
    <fullName>start_time__c</fullName>
    <description>Session start</description>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>